--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,6 @@ header {
 /* .nav-list {
     display: flex;
     align-items: center;
-
 }  */
 
 .header-block {
@@ -160,18 +159,19 @@ header {
     margin-left: 50px;
 }
 
-.header-link-feedback{
+.header-link-feedback {
     font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        color: var(--paragraph-text-color);
+    font-size: 14px;
+    line-height: 1.14;
+    color: var(--paragraph-text-color);
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
 }
 
-.icon-phone, .icon-mail {
+.icon-phone,
+.icon-mail {
     fill: currentColor;
 }
 
@@ -182,8 +182,9 @@ header {
 .header-link-feedback:hover,
 .header-link-feedback:focus {
     color: var(--secondary-color);
-    
+
 }
+
 /* .icon-phone:hover,
 .icon-phone:focus {
     fill: var(--secondary-color);
@@ -258,7 +259,7 @@ header {
 .feauter-satellite::before {
 
     /* background-image: url(../images/feature1.svg); */
-    background-color: var(--bg-icons) ;
+    background-color: var(--bg-icons);
     content: "";
     width: 270px;
     height: 120px;
@@ -269,6 +270,7 @@ header {
     margin-bottom: 30px;
     background-repeat: no-repeat;
 }
+
 .feauter-satellite::before {
     background-image: url(../images/feature1.svg);
 }
@@ -310,6 +312,7 @@ header {
 .feauter-diagram::before {
     background-image: url(../images/feature3.svg);
 }
+
 .feauter-astronaut::before {
 
     /* background-image: url(../images/feature1.svg); */
@@ -322,13 +325,14 @@ header {
     /* background: #F5F4FA; */
     justify-content: center;
     margin-bottom: 30px;
-    
+
     background-repeat: no-repeat;
 }
 
 .feauter-astronaut::before {
     background-image: url(../images/feature4.svg);
 }
+
 .features-box {
     display: flex;
     /* padding-top: 94px;
@@ -434,14 +438,15 @@ header {
 
 
 .icon-team-link {
- display: flex;
- align-items: center;
- justify-content: center;
- width: 44px;
- height: 44px;
-border-radius: 50%;
-fill:  var(--fill-svg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    fill: var(--fill-svg);
 }
+
 /* background-color: var(--bg-white); */
 
 
@@ -451,7 +456,7 @@ fill:  var(--fill-svg);
 
 .icon-team-link:hover,
 .icon-team-link:focus {
-    fill:  var(--bg-white);
+    fill: var(--bg-white);
     background-color: var(--secondary-color);
     border-radius: 50%;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -520,18 +525,27 @@ fill:  var(--fill-svg);
 
 /* footer */
 /* social */
-footer {
+.container-band {
     display: flex;
+    align-items: baseline;
 }
-address {
-    display: flex;
+
+.footer-box {
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
 }
+
+
+
 .social {
     margin-left: 70px;
-    display: block;
+    display: inline-block;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
+
 }
+
 .icons-footer {
     display: flex;
     gap: 10px;
@@ -539,14 +553,15 @@ address {
 
 .icon-footer-link {
     display: flex;
-        justify-content: center;
-        align-items: center;
-        fill:var(--bg-white);
-        width: 44px;
-        height: 44px;
-        border-radius: 50%;
-        background-color: rgba(255, 255, 255, 0.1);
+    justify-content: center;
+    align-items: center;
+    fill: var(--bg-white);
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
 }
+
 .icon-footer-link:hover,
 .icon-footer-link:focus {
     background-color: var(--secondary-color);
@@ -636,14 +651,15 @@ address {
 
     /* client */
 }
+
 .title-clients {
     font-family: 'Roboto';
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.16;
-        text-align: center;
-        letter-spacing: 0.03em;
-        margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
 }
 
 .icon-client-link {
@@ -653,7 +669,7 @@ address {
     width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
-     border-radius: 4px;
+    border-radius: 4px;
     fill: var(--fill-svg);
 }
 
@@ -664,13 +680,13 @@ address {
     gap: 30px;
     flex-wrap: wrap;
 
-}   
+}
 
 .icon-client-link:hover,
 .icon-client-link:focus {
     fill: var(--secondary-color);
     border: 1px solid #2196F3;
-    
+
 }
 
 
