--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ header {
     /* background: var(--bg-white); */
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url(../images/bg-hero.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4) , rgba(47, 48, 58, 0.4)), url(../images/bg-hero.jpg);
     margin-left: auto;
     margin-right: auto;
     background-repeat: no-repeat;
@@ -771,6 +771,9 @@ header {
     /* border: 1px solid #EEEEEE; */
     /* outline: 1px solid #EEEEEE;  */
     display: block;
+}
+.portfoli-item:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .porfolio-box {
