--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
     background: var(--bg-white);
     color: var(--primary-text-color);
     font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.02em;
 }
 
 a {
